validate links with existing areas