@@ -1,9 +1,8 @@
-package com.rte_france.antares.datamanager_back.util.ExcelFileValidators.ColumnsEnums;
+package com.rte_france.antares.datamanager_back.util.excel_file_validators.columns_enum;
 
 import lombok.Getter;
 import java.text.Normalizer;
 import java.util.*;
-import java.util.stream.Collectors;
 
 @Getter
 public enum ExcelFileType {
@@ -24,7 +23,7 @@ public enum ExcelFileType {
                     }
                 })
                 .map(ExcelFileType::normalizeColumnName)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
